# sympy2jax

./: .pre-commit-config.yaml  CONTRIBUTING.md  README.md  pyproject.toml  setup.py
.github/workflows/: release.yml  run_tests.yml
sympy2jax/: __init__.py  sympy_module.py
tests/: test_symbolic_module.py
